fixed footer facebook spacing

--- a/css/style.css
+++ b/css/style.css
@@ -370,9 +370,20 @@ footer {
   place-items: center;
 }
 
+.media_footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 .media_footer > a {
   text-decoration: none;
   font-size: 0.8rem;
+  justify-self: start;
+  padding-left: 5px;
+}
+.media_footer img {
+  width: 14px;
+  height: 14px;
+  justify-self: end;
 }
 
 #footer_info {
@@ -545,7 +556,7 @@ input[type=text], select {
 }
 
 input[type=submit] {
-  width: 20%;
+  width: 100%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
