--- a/scss/contact_page.scss
+++ b/scss/contact_page.scss
@@ -61,7 +61,7 @@ input[type=text], select {
   }
   
   input[type=submit] {
-    width: 20%;
+    width: 100%;
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
