--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -11,9 +11,18 @@ footer {
     place-items: center;
 }
 .media_footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     >a{
     text-decoration: none;
     font-size: 0.8rem;
+    justify-self: start;
+    padding-left: 5px;
+    }
+    img{
+        width: 14px;
+        height: 14px;
+        justify-self: end;
     }
 }
 #footer_info {
